# Space-Blitz

Space_Blitz/: CMakeLists.txt
Space_Blitz/Space_Blitz/: CMakeLists.txt
Space_Blitz/Space_Blitz/src/: Background.cpp  Collision.cpp  Collision.hpp  Game.cpp  GameObject.hpp  TextureManager.cpp  Vector2D.cpp  main  main.cpp
Space_Blitz/Space_Blitz/src/ECS/: Animation.hpp  ColliderComponent.hpp  ECS.hpp  Health.hpp  KeyboardController.hpp  ProjectileComponent.hpp  SpriteComponent.hpp
Space_Blitz/src/: Background.cpp  Background.hpp  Game.cpp  Game.hpp  GameObject.cpp  TextureManager.hpp  Vector2D.cpp  Vector2D.hpp
Space_Blitz/src/ECS/: Components.hpp  ECS.hpp  KeyboardController.hpp  ProjectileComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp
